--- a/achievers.css
+++ b/achievers.css
@@ -64,12 +64,12 @@ h1, h2 {
     font-weight: bold;
     color: #f8f5f5;
     background-color: rgba(255, 165, 0, 0.9); /* Semi-transparent orange */
-    padding: 40px 400px;
+    padding: 40px 365px;
     display: inline-block;
-    border-radius: 40px;
+    border-radius: 40px 0 0 40px;
     text-align: right; /* Aligns text inside the h2 element */
     margin-left: 600px; /* Pushes the element to the right */
-    margin-right: 20px;
+    margin-right: 0px;
 }
 
 .honours-header p {
@@ -115,17 +115,17 @@ h1, h2 {
 }
 
 .inspirers-header h2 {
-	width: 350px;
+	width:350px;
     font-size: 3rem;
     font-weight: bold;
     color: #f8f5f5;
     background-color: rgba(255, 165, 0, 0.9); /* Semi-transparent orange */
-    padding: 40px 400px;
+    padding: 40px 279px;
     display: inline-block;
-    border-radius: 40px;
+    border-radius: 40px 0 0 40px;
     text-align: right;
     margin-left: 600px; /* Pushes the element to the right */
-    margin-right: 20px;
+    margin-right: 0px;
 }
 
 .inspirers-header p {
@@ -212,8 +212,13 @@ h1, h2 {
         padding: 10px 20px;
         margin-left: 10px;
         margin-right: 10px;
-        text-align: center; /* Centers the header for mobile */
+        text-align: center;/* Centers the header for mobile */
+		border-radius: 40px;
+		
     }
+	.inspirers-header h2{
+		width: 250px;
+	}
 
     .honours-header p, 
     .inspirers-header p {
