--- a/achievers.css
+++ b/achievers.css
@@ -20,7 +20,7 @@ body {
 
 .logo {
     position: absolute;
-    top: 30px; /* Adjust to the desired top position */
+    top: 10px; /* Adjust to the desired top position */
     left: 10px; /* Adjust to the desired left position */
     width: 150px; /* Adjust the size of the logo */
     height: auto;
@@ -197,6 +197,7 @@ h1, h2 {
     }
 
     .logo {
+		top:30px;
         margin-top: -25px;
         left: -50%;
     }
